# canopen-linux

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
dependencies/: CMakeLists.txt
script/: start_vcan.sh
src/: CMakeLists.txt
src/app/: clock_app.c  clock_hw.c  clock_spec.c
src/apps/clock/: CMakeLists.txt  app.c  app.h  main.cpp  spec.c
src/apps/setpoint/: CMakeLists.txt  README.md
src/apps/setpoint/master/: CMakeLists.txt  app.cpp  spec.cpp
src/apps/setpoint/slave/: CMakeLists.txt  app.cpp  app.h  main.cpp  spec.cpp  spec.h
src/config/: hw.c  hw.h  main.cpp
src/driver/linux/: drv_can_socketcan.c  drv_can_socketcan.cpp  drv_can_socketcan.h  drv_nvm_file.cpp  drv_nvm_file.h  drv_timer_cpp.cpp  drv_timer_cpp.h
